#Chickens....Trying out different type of css properties for a text & color..

--- a/chicken.html
+++ b/chicken.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chickens - kakeru</title>
+    <link rel="stylesheet" href="css/app.css">
 </head>
 <!-- Body contains all site data -->
 <body>
@@ -95,9 +96,9 @@
         to be due to a decline in GnRH-I-N.[40]
     </p>
     
-    <h2>Origin</h2>
+    <h2 id="origin">Origin</h2>
     
-    <h3>Phylogeny</h3>
+    <h3 class="phylogency">Phylogeny</h3>
     <p>
         Water or ground-dwelling fowl similar to modern partridges, in the Galliformes, the order of bird that chickens
         belong
